<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.m1_jbbm_ejer_futbol.ConfiguracionActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nombreEquipo"

        android:hint="@string/hint_equipo"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nombreDT"

        android:hint="@string/hint_dt"
        android:inputType="textPersonName"
        android:layout_below="@+id/edit_nombreEquipo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_liga"
        android:text="Liga"
        android:layout_below="@+id/edit_nombreDT"
        android:paddingTop="50dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_liga"
        android:layout_below="@+id/text_liga"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_guardar"

        android:text="@string/button_guardar"
        android:layout_below="@+id/spinner_liga"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
